# demo_web_zip_wasm

./: .gitignore  Cargo.toml  README.md  demo_web_zip_wasm-eb2f5629928ec371.js  demo_web_zip_wasm-eb2f5629928ec371_bg.wasm  index.html
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json
src/: main.rs
src/entities/: mod.rs
src/entities/file/: mod.rs  model.rs  ui.rs
src/features/file/: mod.rs
src/features/file/add_files/: mod.rs  ui.rs
src/features/file/compress_files/: mod.rs  model.rs  ui.rs
src/features/file/delete_file/: mod.rs  ui.rs
src/pages/: index.rs  mod.rs
src/share/: fs_tools.rs  mod.rs
src/widgets/: mod.rs
src/widgets/file_selection_block/: mod.rs  ui.rs
